--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "license": "ISC",
   "dependencies": {
     "@wordpress/stylelint-config": "^21.6.0",
+    "postcss-html": "^1.5.0",
     "postcss-less": "^6.0.0",
+    "stylelint-config-html": "^1.1.0",
     "stylelint-config-recommended-less": "^1.0.4",
     "stylelint-config-standard": "^29.0.0",
     "stylelint-declaration-block-no-ignored-properties": "^2.6.0"
