--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stylelint-config-akrc",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "main": "index.js",
   "keywords": [],
@@ -19,6 +19,7 @@
     ".": "./index.js"
   },
   "files": [
-    "./index.js"
+    "./index.js",
+    "./config.json"
   ]
 }
